<resources>
    <string name="app_name">Playlist maker</string>
    <string name="find">Поиск</string>
    <string name="mediatecа">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="support">Написать в поддержку</string>
    <string name="arrow_forward">Пользовательское соглашение</string>
    <string name="share">Поделиться приложением</string>
    <string name="black_theme">Темная тема</string>

</resources>
