<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/find"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/mediatecа"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"
            app:icon="@drawable/medic"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textAllCaps="false"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

    </LinearLayout>

</LinearLayout>